fix: adjust color contrast on navbar

--- a/assets/scss/_styles_project.scss
+++ b/assets/scss/_styles_project.scss
@@ -89,8 +89,21 @@
     color: #2f4f4f;
   }
 }
-
 .td-navbar {
+  .nav-link {
+    color: white;
+    
+    &:hover {
+      color: white;
+      opacity: 0.7;
+      text-decoration: underline;
+    }
+    
+    &.active {
+      text-decoration: underline;
+    }
+  }
+}
   .navbar-brand {
     @include media-breakpoint-up(md) {
       padding: 0;
@@ -102,7 +115,7 @@
       display: none;
     }
   }
-}
+
 
 // Adjust the spacing of page-meta and page-TOC (https://github.com/open-telemetry/opentelemetry.io/pull/354)
 // TODO: upstream
